; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ra144.c_ff_copy_and_dup.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ra144.c_ff_copy_and_dup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFFERSIZE = common dso_local global i32 0, align 4
@BLOCKSIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_copy_and_dup(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @BUFFERSIZE, align 4
  %8 = load i32, i32* %6, align 4
  %9 = sub nsw i32 %7, %8
  %10 = load i32*, i32** %5, align 8
  %11 = sext i32 %9 to i64
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* @BLOCKSIZE, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @FFMIN(i32 %15, i32 %16)
  %18 = sext i32 %17 to i64
  %19 = mul i64 %18, 4
  %20 = trunc i64 %19 to i32
  %21 = call i32 @memcpy(i32* %13, i32* %14, i32 %20)
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @BLOCKSIZE, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %38

25:                                               ; preds = %3
  %26 = load i32*, i32** %4, align 8
  %27 = load i32, i32* %6, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32*, i32** %5, align 8
  %31 = load i32, i32* @BLOCKSIZE, align 4
  %32 = load i32, i32* %6, align 4
  %33 = sub nsw i32 %31, %32
  %34 = sext i32 %33 to i64
  %35 = mul i64 %34, 4
  %36 = trunc i64 %35 to i32
  %37 = call i32 @memcpy(i32* %29, i32* %30, i32 %36)
  br label %38

38:                                               ; preds = %25, %3
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @FFMIN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
